Specify image's height to avoid content jumping

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,5 @@ header {
 }
 
 header img {
-  height: auto;
   max-width: 100%;
 }
